k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: game-2048
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-2048
  namespace: game-2048
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2048
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-2048
    spec:
      serviceAccountName: app-service-account
      containers:
      - name: app-2048
        image: 180294223177.dkr.ecr.us-east-1.amazonaws.com/wiz-lab-app:latest
        # INTENTIONAL MISCONFIGURATION: plaintext MongoDB URI as environment variable
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: wizexercise
          mountPath: /usr/share/nginx/html/wizexercise.txt
          subPath: wizexercise.txt
      volumes:
      - name: wizexercise
        configMap:
          name: wizexercise
---
apiVersion: v1
kind: Service
metadata:
  name: service-2048
  namespace: game-2048
spec:
  selector:
    app.kubernetes.io/name: app-2048
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-2048
  namespace: game-2048
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: eks.amazonaws.com/alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-2048
            port:
              number: 80
